// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Cards/EventCard Default 1`] = `
.c4 {
  display: inline-block;
  height: 23px;
  width: 23px;
  color: #FFF;
}

.c4 > svg {
  height: 100%;
  width: 100%;
  color: #FFF;
}

.c3 {
  font-family: NB International Pro,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 300;
  font-size: 16px;
  line-height: 24px;
  color: #FFF;
}

.c3 a {
  font-family: NB International Pro,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 300;
  font-size: 16px;
  line-height: 24px;
  color: #FFF;
}

.c10 {
  font-family: NB International Pro,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 300;
  font-size: 14px;
  line-height: 20px;
  color: inherit;
}

.c10 a {
  font-family: NB International Pro,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 300;
  font-size: 14px;
  line-height: 20px;
  color: inherit;
}

.c12 {
  font-family: NB International Pro,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 300;
  font-size: 16px;
  line-height: 24px;
  color: inherit;
}

.c12 a {
  font-family: NB International Pro,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 300;
  font-size: 16px;
  line-height: 24px;
  color: inherit;
}

.c14 {
  font-family: NB International Pro,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 700;
  font-size: 18px;
  line-height: 26px;
  color: #6D6E70;
}

.c14 a {
  font-family: NB International Pro,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 700;
  font-size: 18px;
  line-height: 26px;
  color: #6D6E70;
}

.c2 {
  text-transform: uppercase;
  margin-top: 0;
  font-family: NB International Pro,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 700;
  color: #FFF;
  font-size: 45px;
}

.c8 {
  text-transform: uppercase;
  margin-top: 0;
  font-family: NB International Pro,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 700;
  color: #6D6E70;
  font-size: 34px;
}

.c0 {
  position: relative;
  width: 100%;
  height: 100%;
  overflow: hidden;
  display: grid;
  grid-template-rows: repeat(2,auto);
  grid-template-columns: 85px auto;
  background-color: #F5F5F5;
  border-bottom-left-radius: 40px;
  border-top-right-radius: 40px;
  -webkit-transition: all 0.2s linear;
  transition: all 0.2s linear;
}

.c0:hover {
  background-color: #FFF;
  box-shadow: 0 0 20px 0 rgba(140,140,140,0.5);
}

.c7 {
  grid-area: 1/ 2;
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 30px 30px 0px 22px;
}

.c9 {
  margin-bottom: 11px;
}

.c11 {
  font-style: italic;
  margin-bottom: 27px;
}

.c6 {
  margin-top: 50px;
  opacity: 0;
  -webkit-transition: opacity 0.2s ease-out;
  transition: opacity 0.2s ease-out;
}

.c1 {
  grid-area: 1/ 1 / span 2 / span 1;
  position: relative;
  background-color: #6D6E70;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 24px 15px 0px 20px;
  text-align: center;
}

.c1 > h2 {
  margin-bottom: 0px;
  line-height: 40px;
}

.c1:hover .c5 {
  opacity: 1;
}

.c13 {
  grid-area: 2 / 2;
  padding: 20px 15px 20px 20px;
}

.c16 {
  background-color: #FFF;
  color: #252525;
  font-size: 14px;
  font-weight: 300;
  font-family: NB International Pro,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  border-radius: 25px;
  padding: 0 20px;
  height: 45px;
  border: none;
  outline: none;
  -webkit-transition: all 0.2s ease-out;
  transition: all 0.2s ease-out;
  width: 100%;
  border: none;
}

.c16:focus,
.c16:active {
  box-shadow: 0 0 10px rgba(0,0,0,0.8);
}

.c16::-webkit-input-placeholder {
  color: #252525;
  font-style: italic;
}

.c16::-moz-placeholder {
  color: #252525;
  font-style: italic;
}

.c16:-ms-input-placeholder {
  color: #252525;
  font-style: italic;
}

.c16::placeholder {
  color: #252525;
  font-style: italic;
}

.c16:active,
.c16:focus {
  box-shadow: none;
}

.c15 {
  position: relative;
  width: 100%;
  border-radius: 25px;
  background-color: #FFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-right: 4px;
  -webkit-transition: box-shadow 0.2s ease-out;
  transition: box-shadow 0.2s ease-out;
  border: 1px solid #C4C4C4;
}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {
  .c3 {
    font-size: 14px;
  }
}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {
  .c3 a {
    font-size: 14px;
  }
}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {

}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {

}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {
  .c12 {
    font-size: 14px;
  }
}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {
  .c12 a {
    font-size: 14px;
  }
}

@media screen and (max-width:991px) {
  .c14 {
    font-size: 16px;
  }
}

@media screen and (max-width:767px) {
  .c14 {
    font-size: 14px;
  }
}

@media screen and (max-width:991px) {
  .c14 a {
    font-size: 16px;
  }
}

@media screen and (max-width:767px) {
  .c14 a {
    font-size: 14px;
  }
}

@media screen and (max-width:991px) {
  .c2 {
    font-size: 40px;
  }
}

@media screen and (max-width:767px) {
  .c2 {
    font-size: 30px;
  }
}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {
  .c8 {
    font-size: 25px;
  }
}

@media screen and (max-width:767px) {
  .c1 {
    grid-area: 1/ 1;
  }
}

@media screen and (max-width:767px) {
  .c1 > h2 {
    font-size: 40px;
  }
}

@media screen and (max-width:767px) {
  .c13 {
    grid-area: 2/ 1 / span 1 / span 2;
  }
}

<div
  style={
    Object {
      "maxWidth": 600,
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <h2
        className="c2"
        color="light"
      >
        17
      </h2>
      <h2
        className="c2"
        color="light"
      >
        12
      </h2>
      <span
        className="c3"
        color="light"
        size="md"
      >
        1995
      </span>
      <span
        className="c4 c5 c6"
        color="#FFF"
        size="23px"
      >
        <svg
          viewBox="0 0 50 50"
          xmlns="http://www.w3.org/2000/svg"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        >
          <defs>
            <path
              d="M0 0h38.216v48H0z"
            />
          </defs>
          <g
            fill="none"
            fillRule="evenodd"
          >
            <path
              d="M28.5 7.392Z"
              fill="currentColor"
            />
            <g
              transform="rotate(90 21.608 27.5)"
            >
              <path
                d="M37.777 18.048 20.17.441a1.311 1.311 0 0 0-.112-.101c-.016-.014-.035-.026-.053-.04-.02-.016-.041-.032-.063-.047-.023-.016-.046-.028-.07-.043a1.924 1.924 0 0 0-.055-.033L19.74.142a.77.77 0 0 0-.058-.027c-.025-.01-.05-.02-.075-.028-.02-.006-.041-.015-.063-.021-.026-.009-.052-.014-.078-.021L19.403.03c-.031-.007-.063-.01-.094-.015l-.052-.007a1.34 1.34 0 0 0-.298 0l-.051.007c-.032.004-.063.008-.093.015-.023.004-.044.01-.066.015-.026.007-.052.012-.078.02-.021.007-.042.016-.062.022l-.075.028a.77.77 0 0 0-.06.027l-.073.035c-.019.011-.038.022-.057.035-.023.013-.047.025-.068.04A1.117 1.117 0 0 0 18.21.3l-.053.04c-.04.031-.076.065-.112.1L.44 18.049a1.5 1.5 0 0 0 2.121 2.121L17.608 5.121v41.38a1.5 1.5 0 0 0 3 0V5.12L35.656 20.17a1.494 1.494 0 0 0 2.121 0 1.5 1.5 0 0 0 0-2.121"
                fill="currentColor"
              />
            </g>
          </g>
        </svg>
      </span>
    </div>
    <div
      className="c7"
    >
      <h4
        className="c8 c9"
        color="primary"
      >
        Lore Ipsum
      </h4>
      <span
        className="c10 c11"
        size="sm"
      >
        17 December 1995 / 20 March 2022
      </span>
      <span
        className="c12 "
      >
        <span
          className="c12"
          size="md"
        >
          Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam eaque ipsa...
        </span>
      </span>
    </div>
    <div
      className="c13"
    >
      <div
        style={
          Object {
            "display": "flex",
            "flexDirection": "column",
          }
        }
      >
        <span
          className="c14"
          color="primary"
          size="lg"
        >
          INPUT TITLE
        </span>
        <div
          className="c15"
        >
          <input
            className="c16"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            type="text"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Cards/EventCard Hover State 1`] = `
.c4 {
  display: inline-block;
  height: 23px;
  width: 23px;
  color: #FFF;
}

.c4 > svg {
  height: 100%;
  width: 100%;
  color: #FFF;
}

.c3 {
  font-family: NB International Pro,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 300;
  font-size: 16px;
  line-height: 24px;
  color: #FFF;
}

.c3 a {
  font-family: NB International Pro,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 300;
  font-size: 16px;
  line-height: 24px;
  color: #FFF;
}

.c10 {
  font-family: NB International Pro,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 300;
  font-size: 14px;
  line-height: 20px;
  color: inherit;
}

.c10 a {
  font-family: NB International Pro,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 300;
  font-size: 14px;
  line-height: 20px;
  color: inherit;
}

.c12 {
  font-family: NB International Pro,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 300;
  font-size: 16px;
  line-height: 24px;
  color: inherit;
}

.c12 a {
  font-family: NB International Pro,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 300;
  font-size: 16px;
  line-height: 24px;
  color: inherit;
}

.c14 {
  font-family: NB International Pro,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 700;
  font-size: 18px;
  line-height: 26px;
  color: #6D6E70;
}

.c14 a {
  font-family: NB International Pro,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 700;
  font-size: 18px;
  line-height: 26px;
  color: #6D6E70;
}

.c2 {
  text-transform: uppercase;
  margin-top: 0;
  font-family: NB International Pro,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 700;
  color: #FFF;
  font-size: 45px;
}

.c8 {
  text-transform: uppercase;
  margin-top: 0;
  font-family: NB International Pro,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 700;
  color: #6D6E70;
  font-size: 34px;
}

.c0 {
  position: relative;
  width: 100%;
  height: 100%;
  overflow: hidden;
  display: grid;
  grid-template-rows: repeat(2,auto);
  grid-template-columns: 85px auto;
  background-color: #F5F5F5;
  border-bottom-left-radius: 40px;
  border-top-right-radius: 40px;
  -webkit-transition: all 0.2s linear;
  transition: all 0.2s linear;
}

.c0:hover {
  background-color: #FFF;
  box-shadow: 0 0 20px 0 rgba(140,140,140,0.5);
}

.c7 {
  grid-area: 1/ 2;
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 30px 30px 0px 22px;
}

.c9 {
  margin-bottom: 11px;
}

.c11 {
  font-style: italic;
  margin-bottom: 27px;
}

.c6 {
  margin-top: 50px;
  opacity: 0;
  -webkit-transition: opacity 0.2s ease-out;
  transition: opacity 0.2s ease-out;
}

.c1 {
  grid-area: 1/ 1 / span 2 / span 1;
  position: relative;
  background-color: #6D6E70;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 24px 15px 0px 20px;
  text-align: center;
}

.c1 > h2 {
  margin-bottom: 0px;
  line-height: 40px;
}

.c1:hover .c5 {
  opacity: 1;
}

.c13 {
  grid-area: 2 / 2;
  padding: 20px 15px 20px 20px;
}

.c16 {
  background-color: #FFF;
  color: #252525;
  font-size: 14px;
  font-weight: 300;
  font-family: NB International Pro,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  border-radius: 25px;
  padding: 0 20px;
  height: 45px;
  border: none;
  outline: none;
  -webkit-transition: all 0.2s ease-out;
  transition: all 0.2s ease-out;
  width: 100%;
  border: none;
}

.c16:focus,
.c16:active {
  box-shadow: 0 0 10px rgba(0,0,0,0.8);
}

.c16::-webkit-input-placeholder {
  color: #252525;
  font-style: italic;
}

.c16::-moz-placeholder {
  color: #252525;
  font-style: italic;
}

.c16:-ms-input-placeholder {
  color: #252525;
  font-style: italic;
}

.c16::placeholder {
  color: #252525;
  font-style: italic;
}

.c16:active,
.c16:focus {
  box-shadow: none;
}

.c15 {
  position: relative;
  width: 100%;
  border-radius: 25px;
  background-color: #FFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-right: 4px;
  -webkit-transition: box-shadow 0.2s ease-out;
  transition: box-shadow 0.2s ease-out;
  border: 1px solid #C4C4C4;
}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {
  .c3 {
    font-size: 14px;
  }
}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {
  .c3 a {
    font-size: 14px;
  }
}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {

}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {

}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {
  .c12 {
    font-size: 14px;
  }
}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {
  .c12 a {
    font-size: 14px;
  }
}

@media screen and (max-width:991px) {
  .c14 {
    font-size: 16px;
  }
}

@media screen and (max-width:767px) {
  .c14 {
    font-size: 14px;
  }
}

@media screen and (max-width:991px) {
  .c14 a {
    font-size: 16px;
  }
}

@media screen and (max-width:767px) {
  .c14 a {
    font-size: 14px;
  }
}

@media screen and (max-width:991px) {
  .c2 {
    font-size: 40px;
  }
}

@media screen and (max-width:767px) {
  .c2 {
    font-size: 30px;
  }
}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {
  .c8 {
    font-size: 25px;
  }
}

@media screen and (max-width:767px) {
  .c1 {
    grid-area: 1/ 1;
  }
}

@media screen and (max-width:767px) {
  .c1 > h2 {
    font-size: 40px;
  }
}

@media screen and (max-width:767px) {
  .c13 {
    grid-area: 2/ 1 / span 1 / span 2;
  }
}

<div
  style={
    Object {
      "maxWidth": 600,
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <h2
        className="c2"
        color="light"
      >
        17
      </h2>
      <h2
        className="c2"
        color="light"
      >
        12
      </h2>
      <span
        className="c3"
        color="light"
        size="md"
      >
        1995
      </span>
      <span
        className="c4 c5 c6"
        color="#FFF"
        size="23px"
      >
        <svg
          viewBox="0 0 50 50"
          xmlns="http://www.w3.org/2000/svg"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        >
          <defs>
            <path
              d="M0 0h38.216v48H0z"
            />
          </defs>
          <g
            fill="none"
            fillRule="evenodd"
          >
            <path
              d="M28.5 7.392Z"
              fill="currentColor"
            />
            <g
              transform="rotate(90 21.608 27.5)"
            >
              <path
                d="M37.777 18.048 20.17.441a1.311 1.311 0 0 0-.112-.101c-.016-.014-.035-.026-.053-.04-.02-.016-.041-.032-.063-.047-.023-.016-.046-.028-.07-.043a1.924 1.924 0 0 0-.055-.033L19.74.142a.77.77 0 0 0-.058-.027c-.025-.01-.05-.02-.075-.028-.02-.006-.041-.015-.063-.021-.026-.009-.052-.014-.078-.021L19.403.03c-.031-.007-.063-.01-.094-.015l-.052-.007a1.34 1.34 0 0 0-.298 0l-.051.007c-.032.004-.063.008-.093.015-.023.004-.044.01-.066.015-.026.007-.052.012-.078.02-.021.007-.042.016-.062.022l-.075.028a.77.77 0 0 0-.06.027l-.073.035c-.019.011-.038.022-.057.035-.023.013-.047.025-.068.04A1.117 1.117 0 0 0 18.21.3l-.053.04c-.04.031-.076.065-.112.1L.44 18.049a1.5 1.5 0 0 0 2.121 2.121L17.608 5.121v41.38a1.5 1.5 0 0 0 3 0V5.12L35.656 20.17a1.494 1.494 0 0 0 2.121 0 1.5 1.5 0 0 0 0-2.121"
                fill="currentColor"
              />
            </g>
          </g>
        </svg>
      </span>
    </div>
    <div
      className="c7"
    >
      <h4
        className="c8 c9"
        color="primary"
      >
        Lore Ipsum
      </h4>
      <span
        className="c10 c11"
        size="sm"
      >
        17 December 1995 / 20 March 2022
      </span>
      <span
        className="c12 "
      >
        <span
          className="c12"
          size="md"
        >
          Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam eaque ipsa...
        </span>
      </span>
    </div>
    <div
      className="c13"
    >
      <div
        style={
          Object {
            "display": "flex",
            "flexDirection": "column",
          }
        }
      >
        <span
          className="c14"
          color="primary"
          size="lg"
        >
          INPUT TITLE
        </span>
        <div
          className="c15"
        >
          <input
            className="c16"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            type="text"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Cards/EventCard Translated 1`] = `
.c4 {
  display: inline-block;
  height: 23px;
  width: 23px;
  color: #FFF;
}

.c4 > svg {
  height: 100%;
  width: 100%;
  color: #FFF;
}

.c3 {
  font-family: NB International Pro,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 300;
  font-size: 16px;
  line-height: 24px;
  color: #FFF;
}

.c3 a {
  font-family: NB International Pro,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 300;
  font-size: 16px;
  line-height: 24px;
  color: #FFF;
}

.c10 {
  font-family: NB International Pro,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 300;
  font-size: 14px;
  line-height: 20px;
  color: inherit;
}

.c10 a {
  font-family: NB International Pro,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 300;
  font-size: 14px;
  line-height: 20px;
  color: inherit;
}

.c12 {
  font-family: NB International Pro,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 300;
  font-size: 16px;
  line-height: 24px;
  color: inherit;
}

.c12 a {
  font-family: NB International Pro,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 300;
  font-size: 16px;
  line-height: 24px;
  color: inherit;
}

.c14 {
  font-family: NB International Pro,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 700;
  font-size: 18px;
  line-height: 26px;
  color: #6D6E70;
}

.c14 a {
  font-family: NB International Pro,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 700;
  font-size: 18px;
  line-height: 26px;
  color: #6D6E70;
}

.c2 {
  text-transform: uppercase;
  margin-top: 0;
  font-family: NB International Pro,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 700;
  color: #FFF;
  font-size: 45px;
}

.c8 {
  text-transform: uppercase;
  margin-top: 0;
  font-family: NB International Pro,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 700;
  color: #6D6E70;
  font-size: 34px;
}

.c0 {
  position: relative;
  width: 100%;
  height: 100%;
  overflow: hidden;
  display: grid;
  grid-template-rows: repeat(2,auto);
  grid-template-columns: 85px auto;
  background-color: #F5F5F5;
  border-bottom-left-radius: 40px;
  border-top-right-radius: 40px;
  -webkit-transition: all 0.2s linear;
  transition: all 0.2s linear;
}

.c0:hover {
  background-color: #FFF;
  box-shadow: 0 0 20px 0 rgba(140,140,140,0.5);
}

.c7 {
  grid-area: 1/ 2;
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 30px 30px 0px 22px;
}

.c9 {
  margin-bottom: 11px;
}

.c11 {
  font-style: italic;
  margin-bottom: 27px;
}

.c6 {
  margin-top: 50px;
  opacity: 0;
  -webkit-transition: opacity 0.2s ease-out;
  transition: opacity 0.2s ease-out;
}

.c1 {
  grid-area: 1/ 1 / span 2 / span 1;
  position: relative;
  background-color: #6D6E70;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 24px 15px 0px 20px;
  text-align: center;
}

.c1 > h2 {
  margin-bottom: 0px;
  line-height: 40px;
}

.c1:hover .c5 {
  opacity: 1;
}

.c13 {
  grid-area: 2 / 2;
  padding: 20px 15px 20px 20px;
}

.c16 {
  background-color: #FFF;
  color: #252525;
  font-size: 14px;
  font-weight: 300;
  font-family: NB International Pro,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  border-radius: 25px;
  padding: 0 20px;
  height: 45px;
  border: none;
  outline: none;
  -webkit-transition: all 0.2s ease-out;
  transition: all 0.2s ease-out;
  width: 100%;
  border: none;
}

.c16:focus,
.c16:active {
  box-shadow: 0 0 10px rgba(0,0,0,0.8);
}

.c16::-webkit-input-placeholder {
  color: #252525;
  font-style: italic;
}

.c16::-moz-placeholder {
  color: #252525;
  font-style: italic;
}

.c16:-ms-input-placeholder {
  color: #252525;
  font-style: italic;
}

.c16::placeholder {
  color: #252525;
  font-style: italic;
}

.c16:active,
.c16:focus {
  box-shadow: none;
}

.c15 {
  position: relative;
  width: 100%;
  border-radius: 25px;
  background-color: #FFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-right: 4px;
  -webkit-transition: box-shadow 0.2s ease-out;
  transition: box-shadow 0.2s ease-out;
  border: 1px solid #C4C4C4;
}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {
  .c3 {
    font-size: 14px;
  }
}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {
  .c3 a {
    font-size: 14px;
  }
}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {

}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {

}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {
  .c12 {
    font-size: 14px;
  }
}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {
  .c12 a {
    font-size: 14px;
  }
}

@media screen and (max-width:991px) {
  .c14 {
    font-size: 16px;
  }
}

@media screen and (max-width:767px) {
  .c14 {
    font-size: 14px;
  }
}

@media screen and (max-width:991px) {
  .c14 a {
    font-size: 16px;
  }
}

@media screen and (max-width:767px) {
  .c14 a {
    font-size: 14px;
  }
}

@media screen and (max-width:991px) {
  .c2 {
    font-size: 40px;
  }
}

@media screen and (max-width:767px) {
  .c2 {
    font-size: 30px;
  }
}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {
  .c8 {
    font-size: 25px;
  }
}

@media screen and (max-width:767px) {
  .c1 {
    grid-area: 1/ 1;
  }
}

@media screen and (max-width:767px) {
  .c1 > h2 {
    font-size: 40px;
  }
}

@media screen and (max-width:767px) {
  .c13 {
    grid-area: 2/ 1 / span 1 / span 2;
  }
}

<div
  style={
    Object {
      "maxWidth": 600,
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <h2
        className="c2"
        color="light"
      >
        17
      </h2>
      <h2
        className="c2"
        color="light"
      >
        12
      </h2>
      <span
        className="c3"
        color="light"
        size="md"
      >
        1995
      </span>
      <span
        className="c4 c5 c6"
        color="#FFF"
        size="23px"
      >
        <svg
          viewBox="0 0 50 50"
          xmlns="http://www.w3.org/2000/svg"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        >
          <defs>
            <path
              d="M0 0h38.216v48H0z"
            />
          </defs>
          <g
            fill="none"
            fillRule="evenodd"
          >
            <path
              d="M28.5 7.392Z"
              fill="currentColor"
            />
            <g
              transform="rotate(90 21.608 27.5)"
            >
              <path
                d="M37.777 18.048 20.17.441a1.311 1.311 0 0 0-.112-.101c-.016-.014-.035-.026-.053-.04-.02-.016-.041-.032-.063-.047-.023-.016-.046-.028-.07-.043a1.924 1.924 0 0 0-.055-.033L19.74.142a.77.77 0 0 0-.058-.027c-.025-.01-.05-.02-.075-.028-.02-.006-.041-.015-.063-.021-.026-.009-.052-.014-.078-.021L19.403.03c-.031-.007-.063-.01-.094-.015l-.052-.007a1.34 1.34 0 0 0-.298 0l-.051.007c-.032.004-.063.008-.093.015-.023.004-.044.01-.066.015-.026.007-.052.012-.078.02-.021.007-.042.016-.062.022l-.075.028a.77.77 0 0 0-.06.027l-.073.035c-.019.011-.038.022-.057.035-.023.013-.047.025-.068.04A1.117 1.117 0 0 0 18.21.3l-.053.04c-.04.031-.076.065-.112.1L.44 18.049a1.5 1.5 0 0 0 2.121 2.121L17.608 5.121v41.38a1.5 1.5 0 0 0 3 0V5.12L35.656 20.17a1.494 1.494 0 0 0 2.121 0 1.5 1.5 0 0 0 0-2.121"
                fill="currentColor"
              />
            </g>
          </g>
        </svg>
      </span>
    </div>
    <div
      className="c7"
    >
      <h4
        className="c8 c9"
        color="primary"
      >
        Lore Ipsum
      </h4>
      <span
        className="c10 c11"
        size="sm"
      >
        17 dicembre 1995 / 20 marzo 2022
      </span>
      <span
        className="c12 "
      >
        <span
          className="c12"
          size="md"
        >
          Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam eaque ipsa...
        </span>
      </span>
    </div>
    <div
      className="c13"
    >
      <div
        style={
          Object {
            "display": "flex",
            "flexDirection": "column",
          }
        }
      >
        <span
          className="c14"
          color="primary"
          size="lg"
        >
          INPUT TITLE
        </span>
        <div
          className="c15"
        >
          <input
            className="c16"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            type="text"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
